# socker

./: CMakeLists.txt  client_tcp.c  server_tcp.c
Client/: CMakeLists.txt  client.cpp  client.h  main.cpp
Server/: CMakeLists.txt  main.cpp  sclient.cpp  sclient.h  server.cpp
TCP/: CMakeLists.txt  tcp_client.c  tcp_server.c
UDP/: CMakeLists.txt  udp_client.c  udp_server.c
